# tiny_log

./: .gitignore  CMakeLists.txt  README.md  tiny_log.cmake
include/: tiny_log.h  tiny_log_confg.h.cmake  tiny_log_config.h.cmake
src/: tiny_log.c
test/: funcs.cpp  test.cpp
